--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,38 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+
+# Camunda gitignore
+*.swp
+*.*~
+project.lock.json
+.DS_Store
+*.pyc
+
+
+# User-specific files
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+/*.nupkg
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+build/
+bld/
+[Bb]in/
+[Oo]bj/
+[Oo]ut/
+msbuild.log
+msbuild.err
+msbuild.wrn
+
+# Visual Studio 2015
+.vs/
