--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <failOnMissingWebXml>false</failOnMissingWebXml>
+    <skipTests>true</skipTests>
   </properties>
 
   <dependencyManagement>
